Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12573

user32: DrawFrameControl draws bad

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.4
    • None

    Description

      When DrawFrameControl draws the mask of a radio button, its drawing is bad.

      Attachments

        1. radio_test-on-reactos-after.png
          3 kB
          Katayama Hirofumi MZ
        2. radio_test-on-reactos-before.png
          3 kB
          Katayama Hirofumi MZ
        3. draw.c.patch
          18 kB
          jimtabor
        4. radio_test-on-win2k3.png
          3 kB
          Katayama Hirofumi MZ
        5. snapshot74.png
          975 kB
          jimtabor
        6. snapshot75.png
          34 kB
          jimtabor
        7. radio_test2-on-win2k3.png
          10 kB
          Katayama Hirofumi MZ
        8. centering-on-win2k3.png
          10 kB
          Katayama Hirofumi MZ
        9. no-centering-on-ros.png
          14 kB
          Katayama Hirofumi MZ
        10. centering-comparison.png
          2 kB
          Katayama Hirofumi MZ
        11. centering-after.png
          22 kB
          Katayama Hirofumi MZ
        12. centering-fix.patch
          4 kB
          Katayama Hirofumi MZ

        Issue Links

          Activity

            People

              jimtabor jimtabor
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: