[User32] - Patch by Katayama Hirofumi MZ : DrawFrameControl draws bad. See CORE-12573.

svn path=/trunk/; revision=73451